--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 food-fables-backend/models/veg-classifier.h5 filter=lfs diff=lfs merge=lfs -text
+*.h5 filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
